# screenpipe-assistant

./: .gitignore  CLAUDE.md  Cargo.toml  README.md  config.toml.example  screenpipe-clipboard-hook.ps1
src/: claude.rs  config.rs  main.rs  monitor.rs  telegram.rs
