[package]
name = "screenpipe-assistant"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "screenpipe-assistant"
path = "src/main.rs"

[dependencies]
rusqlite  = { version = "0.31", features = ["bundled"] }
reqwest   = { version = "0.11", features = ["blocking", "json"] }
serde     = { version = "1",    features = ["derive"] }
serde_json = "1"
toml      = "0.8"
log       = "0.4"
simplelog = "0.12"
